objects/ssot__KnowledgeArticleEngagement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactId__c</fullName>
        <label>Account Contact</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ArticleViewContextDescription__c</fullName>
        <label>Article View Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BrowserModel__c</fullName>
        <label>Browser Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BrowserName__c</fullName>
        <label>Browser Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointId__c</fullName>
        <label>Contact Point</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceCountry__c</fullName>
        <label>Device Country</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceIPAddress__c</fullName>
        <label>Device IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceLatitude__c</fullName>
        <label>Device Latitude</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceLocaleId__c</fullName>
        <label>Device Locale</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceLongitude__c</fullName>
        <label>Device Longitude</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceModelName__c</fullName>
        <label>Device Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DevicePostalCode__c</fullName>
        <label>Device Postal Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceType__c</fullName>
        <label>Device Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementActionReasonText__c</fullName>
        <label>Engagement Action Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelAction__c</fullName>
        <label>Engagement Channel Action</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelId__c</fullName>
        <label>Engagement Channel</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelType__c</fullName>
        <label>Engagement Channel Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementDateTm__c</fullName>
        <label>Engagement Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementEventDirection__c</fullName>
        <label>Engagement Event Direction</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowElementRunId__c</fullName>
        <label>Flow Element Run</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeographicRegion__c</fullName>
        <label>Geographic Region</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IPAddress__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Knowledge Article Engagement Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTestSend__c</fullName>
        <label>Is Test Send</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__KnowledgeArticleUserType__c</fullName>
        <label>Knowledge Article User Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__KnowledgeArticleVersionId__c</fullName>
        <label>Knowledge Article Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LeadlId__c</fullName>
        <label>Lead</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LinkName__c</fullName>
        <label>Link Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LinkURL__c</fullName>
        <label>Link URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OSModelName__c</fullName>
        <label>OS Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OSName__c</fullName>
        <label>OS Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OSVersionNumber__c</fullName>
        <label>OS Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerslServiceProviderName__c</fullName>
        <label>Personalization Service Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationContentId__c</fullName>
        <label>Personalization Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationId__c</fullName>
        <label>Personalization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationRequestId__c</fullName>
        <label>Personalization Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecipientIPAddress__c</fullName>
        <label>Recipient IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecipientMessageId__c</fullName>
        <label>Recipient Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Referrer__c</fullName>
        <label>Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolvedURL__c</fullName>
        <label>Resolved URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceReferenceId__c</fullName>
        <label>Source Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceReferenceObject__c</fullName>
        <label>Source Reference Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsedForGrounding__c</fullName>
        <label>Used For Grounding</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UserAgentText__c</fullName>
        <label>User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UserId__c</fullName>
        <label>User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebCookieId__c</fullName>
        <label>Web Cookie</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebSession__c</fullName>
        <label>Web Session</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Websiteid__c</fullName>
        <label>Website</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009469497_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KnowledgeArticleEngagement_Knowledge_rel</label>
        <referenceTo>ssot__KnowledgeArticleVersion__dlm</referenceTo>
        <relationshipLabel>KnowledgeArticleEngagement_Knowledge_rel</relationshipLabel>
        <relationshipName>rel_1702009469497_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009470072_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KnowledgeArticleEngagement_SourceRef_rel</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>KnowledgeArticleEngagement_SourceRef_rel</relationshipLabel>
        <relationshipName>rel_1702009470072_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009470337_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KnowledgeArticleEngagement_UserId_ma_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>KnowledgeArticleEngagement_UserId_ma_rel</relationshipLabel>
        <relationshipName>rel_1702009470337_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>